chore: update minor changes

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     />
   </head>
   <body>
-    <div class="w-center">
-      <section class="InputSection">
-        <div class="w-input">
+    <div class="wrapper center">
+      <section class="inputSection">
+        <div class="inputWrapper center">
           <div class="inputTitle">Khurpi Image Search</div>
           <div class="inputButton">
             <button id="btn"></button>
@@ -28,7 +28,7 @@
           </div>
         </div>
       </section>
-      <section class="ImageList">
+      <section class="imageList">
         <article class="center"></article>
       </section>
     </div>
