--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper center">
@@ -32,6 +37,9 @@
         <article class="center"></article>
       </section>
     </div>
+    <button id="toggleTheme" class="button1" <onclick="toggleTheme()">
+      <i class="fa fa-lightbulb"></i>
+    </button>
     <script src="script.js"></script>
   </body>
 </html>
